<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/assistantHeaderCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_lg"
        android:layout_marginTop="@dimen/spacing_lg"
        android:layout_marginEnd="@dimen/spacing_lg"
        app:cardBackgroundColor="@color/bg_card"
        app:cardCornerRadius="@dimen/corner_2xl"
        app:cardElevation="@dimen/elevation_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_lg">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/assistantBackButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_chip_inactive"
                android:contentDescription="@string/game2_back"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.Heading.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assistant_activity_title"
                    android:textColor="@color/color_navy_900" />

                <TextView
                    style="@style/TextStyle.Body.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:text="@string/assistant_activity_subtitle"
                    android:textColor="@color/text_secondary" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/assistantFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assistantHeaderCard" />

</androidx.constraintlayout.widget.ConstraintLayout>
